Use nowrap instead to fix linenumbers

--- a/docs/pylit.css
+++ b/docs/pylit.css
@@ -204,11 +204,13 @@ pre, tt, code {
 }
 
 span.lineno {
+  width: 20px;
   display: inline-block;
   text-align: right;
   padding-right: 10px;
   opacity: 0.3;
   font-size: 10px;
+  white-space: nowrap;
 }
 
 .highlight {
